# annflux

./: CONTRIBUTING.md  DESIGN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  third-party-programs.txt
.github/: CODEOWNERS  bandit_config.yml  dependabot.yml
.github/workflows/: codeql.yml  pre-merge.yml  scorecards.yml  security-scan.yml
release_assets/: coverage_0.9.2.0.txt  coverage_1.0.0.0.txt  coverage_1.0.1.0.txt  ruff_check_1.0.1.0.txt  test_report_0.9.2.0.md  test_report_0.9.3.0.md  test_report_1.0.0.0.md  test_report_1.0.1.0.md  tests_0.9.2.0.txt  tests_0.9.3.0.txt  tests_1.0.0.0.txt  tests_1.0.1.0.txt
src/: run_coverage.py
src/annflux/: repo_results_to_embedding.py  shared.py  train_indeed_image.py
src/annflux/algorithms/: basic_ml.py  embeddings.py  feature_reconstruction_error.py  most_needed.py
src/annflux/data/envdataset/: data.py
src/annflux/examples/: streetsurfacevis.md
src/annflux/performance/: basic.py
src/annflux/repository/: dataset.py  model.py  repository.py  resultset.py
src/annflux/scripts/: add_license_headers.py  annflux_cli.py  run_tests.py  tile_images.py
src/annflux/tests/: test_cli.py  test_server.py  test_train.py
src/annflux/tools/: __init__.py  core.py  data.py  io.py  mixed.py
src/annflux/training/annflux/: clip.py  clip_server.py  clip_shared.py  feature_extractor.py  quick.py
src/annflux/training/tensorflow/: tf_backend.py
src/annflux/ui/basic/: run_server.py
src/annflux/ui/basic/static/: annflux.css  annflux.js  annflux_layout.js  annflux_objects.js  (+1 more)
(+4 files in other folders)
