[project]
name = "annflux"
authors = [
    { name = "Laurens Hogeweg", email = "laurens.hogeweg@intel.com" },
]
version = "1.0.2.0"
description = "This standalone tool provides a basic interface for interacting with large datasets so that they can be explored and annotated efficiently."
requires-python = ">=3.11"
dynamic = ["dependencies"]
readme = "README.md"

[project.scripts]
annflux = "annflux.scripts.annflux_cli:execute"
basic_ui = "annflux.ui.basic.run_server:ui_script_entry"
run_tests = "annflux.scripts.run_tests:_run_tests"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
annflux = ["ui/basic/static/*", "ui/basic/templates/*", "data/**/*.json"]

[tool.ruff]
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = ["build", "dist"]